2024-01-18T01:09:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7563888090 # 33
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
* notice: last 14d: unq all: 15 47
* notice: prev accum: outdated-unq outdated-all / unq all: 532 2800 / 547 2842
* notice: next accum: outdated-unq outdated-all / unq all: 532 2800 / 548 2847
* notice: prev exec diff / last date diff / accum: unq all: +1 +5 -0 -0 / +1 +5 -0 -0 / 1 5
* notice: removed / changed dates: [] / [2024-01-17]

2024-01-17T16:20:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7558668009 # 32
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-17
* notice: last 14d: unq all: 14 42
* notice: prev accum: outdated-unq outdated-all / unq all: 530 2796 / 547 2842
* notice: next accum: outdated-unq outdated-all / unq all: 532 2800 / 547 2842
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-03] / []

2024-01-16T16:19:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7544479722 # 29
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-16
* notice: last 14d: unq all: 16 46
* notice: prev accum: outdated-unq outdated-all / unq all: 529 2793 / 547 2842
* notice: next accum: outdated-unq outdated-all / unq all: 530 2796 / 547 2842
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-02] / []

2024-01-16T01:09:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7535681135 # 27