@@ -1,12 +1,7 @@
 {
-  "count": 47,
-  "uniques": 15,
+  "count": 42,
+  "uniques": 13,
   "views": [
-    {
-      "timestamp": "2024-01-04T00:00:00Z",
-      "count": 5,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-01-05T00:00:00Z",
       "count": 11,
