@@ -1,3 +1,12 @@
+2024-01-18T16:19:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7572901497 # 35
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
+* notice: last 14d: unq all: 13 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 532 2800 / 548 2847
+* notice: next accum: outdated-unq outdated-all / unq all: 534 2805 / 548 2847
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-01-04] / []
+
 2024-01-18T01:09:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7563888090 # 33
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-18
